--- a/lab0_b/lab0_b.vcxproj.filters
+++ b/lab0_b/lab0_b.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Файлы ресурсов</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="output.csv">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
